refactor: cookie
