# app/internal/handler/oapi/api.gen.go
@@ -9,7 +9,6 @@ import (
 	"net/http"
 
 	"github.com/go-chi/chi/v5"
-	"github.com/oapi-codegen/runtime"
 	openapi_types "github.com/oapi-codegen/runtime/types"
 )
 
@@ -37,18 +36,6 @@ type RegisterChallengePasskeyResponse = map[string]interface{}
 // RegisterPasskeyRequest Finalize Attestation Request
 type RegisterPasskeyRequest = map[string]interface{}
 
-// LoginPasskeyParams defines parameters for LoginPasskey.
-type LoginPasskeyParams struct {
-	// Assertion session
-	Assertion string `form:"__assertion__" json:"__assertion__"`
-}
-
-// RegisterPasskeyParams defines parameters for RegisterPasskey.
-type RegisterPasskeyParams struct {
-	// Attestation session
-	Attestation string `form:"__attestation__" json:"__attestation__"`
-}
-
 // LoginPasskeyJSONRequestBody defines body for LoginPasskey for application/json ContentType.
 type LoginPasskeyJSONRequestBody = LoginPasskeyRequest
 
@@ -62,13 +49,13 @@ type RegisterChallengePasskeyJSONRequestBody = RegisterChallengePasskeyRequest
 type ServerInterface interface {
 	// Login with a passkey
 	// (POST /passkey/login)
-	LoginPasskey(w http.ResponseWriter, r *http.Request, params LoginPasskeyParams)
+	LoginPasskey(w http.ResponseWriter, r *http.Request)
 	// Generate a login challenge
 	// (POST /passkey/login-challenge)
 	LoginChallengePasskey(w http.ResponseWriter, r *http.Request)
 	// Register a passkey
 	// (POST /passkey/register)
-	RegisterPasskey(w http.ResponseWriter, r *http.Request, params RegisterPasskeyParams)
+	RegisterPasskey(w http.ResponseWriter, r *http.Request)
 	// Register a new passkey
 	// (POST /passkey/register-challenge)
 	RegisterChallengePasskey(w http.ResponseWriter, r *http.Request)
@@ -80,7 +67,7 @@ type Unimplemented struct{}
 
 // Login with a passkey
 // (POST /passkey/login)
-func (_ Unimplemented) LoginPasskey(w http.ResponseWriter, r *http.Request, params LoginPasskeyParams) {
+func (_ Unimplemented) LoginPasskey(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusNotImplemented)
 }
 
@@ -92,7 +79,7 @@ func (_ Unimplemented) LoginChallengePasskey(w http.ResponseWriter, r *http.Requ
 
 // Register a passkey
 // (POST /passkey/register)
-func (_ Unimplemented) RegisterPasskey(w http.ResponseWriter, r *http.Request, params RegisterPasskeyParams) {
+func (_ Unimplemented) RegisterPasskey(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusNotImplemented)
 }
 
@@ -115,31 +102,10 @@ type MiddlewareFunc func(http.Handler) http.Handler
 func (siw *ServerInterfaceWrapper) LoginPasskey(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
-	var err error
-
 	ctx = context.WithValue(ctx, CookieAuthScopes, []string{})
 
-	// Parameter object where we will unmarshal all parameters from the context
-	var params LoginPasskeyParams
-
-	var cookie *http.Cookie
-
-	if cookie, err = r.Cookie("__assertion__"); err == nil {
-		var value string
-		err = runtime.BindStyledParameterWithOptions("simple", "__assertion__", cookie.Value, &value, runtime.BindStyledParameterOptions{Explode: true, Required: true})
-		if err != nil {
-			siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "__assertion__", Err: err})
-			return
-		}
-		params.Assertion = value
-
-	} else {
-		siw.ErrorHandlerFunc(w, r, &RequiredParamError{ParamName: "__assertion__"})
-		return
-	}
-
 	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.LoginPasskey(w, r, params)
+		siw.Handler.LoginPasskey(w, r)
 	}))
 
 	for _, middleware := range siw.HandlerMiddlewares {
@@ -170,31 +136,10 @@ func (siw *ServerInterfaceWrapper) LoginChallengePasskey(w http.ResponseWriter, 
 func (siw *ServerInterfaceWrapper) RegisterPasskey(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
-	var err error
-
 	ctx = context.WithValue(ctx, CookieAuthScopes, []string{})
 
-	// Parameter object where we will unmarshal all parameters from the context
-	var params RegisterPasskeyParams
-
-	var cookie *http.Cookie
-
-	if cookie, err = r.Cookie("__attestation__"); err == nil {
-		var value string
-		err = runtime.BindStyledParameterWithOptions("simple", "__attestation__", cookie.Value, &value, runtime.BindStyledParameterOptions{Explode: true, Required: true})
-		if err != nil {
-			siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "__attestation__", Err: err})
-			return
-		}
-		params.Attestation = value
-
-	} else {
-		siw.ErrorHandlerFunc(w, r, &RequiredParamError{ParamName: "__attestation__"})
-		return
-	}
-
 	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.RegisterPasskey(w, r, params)
+		siw.Handler.RegisterPasskey(w, r)
 	}))
 
 	for _, middleware := range siw.HandlerMiddlewares {
